fix: cover texxt on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,8 +111,8 @@ main{
 #cover-text{
     background-color:  rgba(109, 167, 112, 0.8);
     font-size: 130%;
-    position: absolute;
-    bottom: 30px;
+    position: relative;
+    top: 332px;
     width: 80%;
     min-height: 200px;
     padding: 40px;
